--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ EVENTBRITE_TOKEN=
 # You can get one by following the documentation here: https://docs.mapbox.com/api/accounts/tokens/
 MAPBOX_TOKEN=
 
+# Appsignal provides performance monitoring
+# Instructions on how to generate this here: https://docs.appsignal.com/ruby/installation.html 
+APPSIGNAL_PUSH_API_KEY=
+
 # If you set up postgres via Docker as per the README, you should set these
 # POSTGRES_HOST=localhost
 # POSTGRES_USER=postgres
