Migrate the AddressComponent to using ViewComponent
Migrating the AddressComponent to use ViewComponent instead
of Mountain View.

Added an excluded style to .rubocop.yml because it got triggered
when committing the new component.

Updated the calls to AddressComponent as well.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -131,4 +131,5 @@ Lint/SelfAssignment:
   Enabled: false
 Lint/RedundantCopDisableDirective:
   Enabled: false
-
+Lint/MissingSuper:
+  Enabled: false
