fix: add imagemagick to ci script

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -39,6 +39,11 @@ jobs:
           bundler-cache: true
           cache-version: 3
 
+      - name: Install Imagemagick
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+
       - uses: nodenv/actions/setup-nodenv@v2
       - uses: nodenv/actions/node-version@v2
         id: nodenv
