--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -58,7 +58,7 @@ jobs:
       - run: bin/test --lint --no-fix
       - if: failure()
         name: Upload test screenshots
-        uses: actions/upload-artifact@ff15f0306b3f739f7b6fd43fb5d26cd321bd4de5 # v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-screenshots
           path: tmp/screenshots/
