--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,11 +2,13 @@ inherit_from: .rubocop_todo.yml
 
 require:
   - rubocop-graphql
+  - rubocop-rake
+
+plugins:
   - rubocop-minitest
   - rubocop-performance
   - rubocop-rails
-  - rubocop-rake
-
+  
 AllCops:
   NewCops: enable
   Exclude:
