fix: attempt to make PRs from people without repo access work

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,7 +1,10 @@
 name: Test and maybe deploy
 
 on:
-  - push
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test-and-deploy:
