feat: skip deploys on forked repos
without this the deploy stage tries to run and fails when code is merged
back into the main branch of forked repositories

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -67,7 +67,7 @@ jobs:
           path: tmp/screenshots/
           if-no-files-found: ignore
 
-      - if: github.ref == 'refs/heads/main'
+      - if: github.ref == 'refs/heads/main' && github.repository == 'geeksforsocialchange/PlaceCal'
         name: Deploy to placecal-staging.org
         uses: dokku/github-action@823c08b33e974704528c7c7f3d3d8002426e7634 # v1.9.0
         with:
@@ -76,7 +76,7 @@ jobs:
           git_remote_url: "ssh://dokku@placecal-staging.org:666/placecal"
           ssh_private_key: ${{ secrets.CI_STAGING_KEY }}
 
-      - if: github.ref == 'refs/heads/production'
+      - if: github.ref == 'refs/heads/production' && github.repository == 'geeksforsocialchange/PlaceCal'
         name: Deploy to placecal.org
         uses: dokku/github-action@823c08b33e974704528c7c7f3d3d8002426e7634 # v1.9.0
         with:
