--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -194,7 +194,7 @@ Naming/MethodParameterName:
 # ForbiddenPrefixes: is_, has_, have_
 # AllowedMethods: is_a?
 # MethodDefinitionMacros: define_method, define_singleton_method
-Naming/PredicateName:
+Naming/PredicatePrefix:
   Exclude:
     - 'app/helpers/application_helper.rb'
     - 'app/jobs/calendar_importer/event_resolver.rb'
