fix: Add production branch to workflow triggers

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -2,9 +2,13 @@ name: Test and maybe deploy
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - production
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - production
 
 jobs:
   test-and-deploy:
