--- a/renovate.json
+++ b/renovate.json
@@ -1,50 +1,48 @@
 {
-	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"config:base",
-		"helpers:pinGitHubActionDigests",
-		"schedule:nonOfficeHours"
-	],
-	"automergeStrategy": "squash",
-	"labels": ["dependencies"],
-	"lockFileMaintenance": {
-		"enabled": true
-	},
-	"major": {
-		"dependencyDashboardApproval": true
-	},
-	"rangeStrategy": "pin",
-	"timezone": "Europe/London",
-	"vulnerabilityAlerts": {
-		"labels": ["security"]
-	},
-	"packageRules": [
-		{
-			"matchUpdateTypes": ["pin", "digest"],
-			"automerge": true
-		},
-		{
-			"matchManagers": ["bundler", "npm"],
-			"matchUpdateTypes": ["minor", "patch"],
-			"matchCurrentVersion": ">=1.0.0",
-			"automerge": true
-		},
-		{
-			"matchManagers": ["nodenv"],
-			"matchUpdateTypes": ["patch"],
-			"automerge": true
-		},
-		{
-			"matchDatasources": ["docker"],
-			"matchPackageNames": ["postgres"],
-			"matchCurrentVersion": "13.4",
-			"allowedVersions": "13.4"
-		}
-	],
-	"npm": {
-		"minimumReleaseAge": "7 days"
-	},
-	"rubygems": {
-		"minimumReleaseAge": "7 days"
-	}
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:base",
+    "helpers:pinGitHubActionDigests",
+    "schedule:nonOfficeHours"
+  ],
+  "automergeStrategy": "squash",
+  "labels": ["dependencies"],
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "major": {
+    "dependencyDashboardApproval": true
+  },
+  "rangeStrategy": "pin",
+  "timezone": "Europe/London",
+  "vulnerabilityAlerts": {
+    "labels": ["security"]
+  },
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["pin", "digest"],
+      "automerge": true
+    },
+    {
+      "matchManagers": ["bundler", "npm"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchCurrentVersion": ">=1.0.0",
+      "automerge": true
+    },
+    {
+      "matchManagers": ["nodenv"],
+      "matchUpdateTypes": ["patch"],
+      "automerge": true
+    },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["postgres"],
+      "matchCurrentVersion": "13.4",
+      "allowedVersions": "13.4"
+    },
+    {
+      "matchManagers": ["npm", "rubygems"],
+      "minimumReleaseAge": "7 days"
+    }
+  ]
 }
