--- a/renovate.json
+++ b/renovate.json
@@ -40,11 +40,9 @@
 			"matchCurrentVersion": "13.4",
 			"allowedVersions": "13.4"
 		}
+		{
+      		"matchManagers": ["npm", "rubygems"],
+      		"minimumReleaseAge": "7 days"
+    	}
 	],
-	"npm": {
-		"minimumReleaseAge": "7 days"
-	},
-	"rubygems": {
-		"minimumReleaseAge": "7 days"
-	}
 }
