--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ doc/rdoc
 # Ignore IDE config files
 .vscode
 /config/master.key
+
+# ClaudeOnRails
+.claude-on-rails/sessions/
+.claude-swarm/
+claude-swarm.log
