Upgrade Rails from 7.2.3 to 8.1.2
- Update Rails to 8.1.2 and related gems
- Update PaperTrail 16 → 17 (Rails 8 compatibility)
- Update CarrierWave 2.2.6 → 3.1.2 (fixes String#mb_chars deprecation)
- Update ViewComponent 3.9 → 4.1.1
- Fix ViewComponent super() calls in components (breaking change in 4.x)
- Remove deprecated to_time_preserves_timezone setting
- Update load_defaults from 7.0 to 8.1
- Add Rails 8 default files (bin/rubocop, error pages)
- Add PlaceCal branded PWA icon (512x512)

Note: mountain_view gem removed in separate PR #2893

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -165,6 +165,10 @@ Rails/RedundantActiveRecordAllMethod:
 Rails/RootPathnameMethods:
   Enabled: false
 
+# TODO: Migrate to params.expect() syntax (Rails 8 feature)
+Rails/StrongParametersExpect:
+  Enabled: false
+
 Rails/ThreeStateBooleanColumn:
   Enabled: false
 
