feat(calendars): Improve status icons with animated dots and distinct states
- Add sequential dots animation for 'in_queue' status (. .. ...)
- Use curved loader icon with spin animation for 'in_worker' status
- Add link_off icon for 'bad_source' to distinguish from 'error'
- Add new icons: more_horizontal, loader, link_off

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -106,6 +106,7 @@ Metrics/CyclomaticComplexity:
 Metrics/ModuleLength:
   Exclude:
     - "lib/normal_island.rb"
+    - "app/helpers/svg_icons_helper.rb"
 
 Metrics/PerceivedComplexity:
   Exclude:
