fix(assets): Fix public site CSS by adding sidecar component imports
- Add explicit link for application.css in manifest.js (Sprockets needs this)
- Import sidecar component stylesheets in application.scss:
  - navigation/navigation (contains .header flexbox styles)
  - dashboard_card, event_list, event, impact_story, paginator, place, profile
- Rename build:css:admin-tailwind to css-admin in package.json
- Remove unused build:css script (public CSS is built by Rails Sprockets)

These component styles were previously auto-loaded by the mountain_view gem
via @import 'mountain_view', but that import can't work with standalone sass
because the gem provides a .css.erb file (Sprockets directive) not SCSS.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
 	},
 	"scripts": {
 		"build": "esbuild app/javascript/public.js --bundle --sourcemap --outfile=app/assets/builds/application.js",
-		"build:css": "sass ./app/assets/stylesheets/application.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules",
-		"build:css:admin-tailwind": "./node_modules/.bin/tailwindcss -i ./app/tailwind/admin_tailwind.css -o ./public/assets/admin_tailwind.css --minify",
-		"build:all": "yarn build && yarn build:css && yarn build:css:admin-tailwind",
+		"css-admin": "./node_modules/.bin/tailwindcss -i ./app/tailwind/admin_tailwind.css -o ./public/assets/admin_tailwind.css --minify",
+		"build:all": "yarn build && yarn css-admin",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"prepare": "husky install"
