fix(deploy): Include Tailwind CSS in yarn build
jsbundling-rails runs 'yarn build' during assets:precompile, but
the build script only ran esbuild for JS. Now it also runs css-admin
to build admin_tailwind.css.

Removes redundant build:all script since build now does everything.

--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
 		"prettier": "2.8.1"
 	},
 	"scripts": {
-		"build": "esbuild app/javascript/public.js --bundle --sourcemap --outfile=app/assets/builds/application.js",
+		"build": "esbuild app/javascript/public.js --bundle --sourcemap --outfile=app/assets/builds/application.js && yarn css-admin",
 		"css-admin": "./node_modules/.bin/tailwindcss -i ./app/tailwind/admin_tailwind.css -o ./app/assets/builds/admin_tailwind.css --minify",
-		"build:all": "yarn build && yarn css-admin",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"prepare": "husky install"
