Replace Mapbox with OpenFreeMap + MapLibre GL
- Add MapLibre GL JS and maplibre-gl-leaflet to importmap
- Create custom themed style JSON files (pink, green, blue, orange, mossley)
- Update leaflet_controller.js to use MapLibre GL vector tiles
- Update map_helper.rb to use theme-based style URLs
- Add MapLibre CSS to public layout
- Remove MAPBOX_TOKEN from .env.example

Closes #2608

--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
 	"name": "placecal",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"private": true,
 	"dependencies": {
+		"@hotwired/stimulus": "3.2.2",
+		"@hotwired/turbo-rails": "7.3.0",
+		"@rails/ujs": "6.1.710",
 		"@tailwindcss/cli": "^4.1.18",
 		"autoprefixer": "^10.4.23",
+		"esbuild": "0.27.2",
+		"esbuild-rails": "1.0.7",
+		"jquery": "3.7.1",
+		"leaflet": "1.9.4",
+		"lodash": "4.17.21",
 		"postcss": "^8.5.6",
 		"sass": "1.97.2",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"tom-select": "^2.4.3"
 	},
 	"devDependencies": {
 		"daisyui": "^5.5.14",
@@ -16,7 +25,7 @@
 		"prettier": "2.8.1"
 	},
 	"scripts": {
-		"build": "yarn css-admin",
+		"build": "esbuild app/javascript/public.js --bundle --sourcemap --outfile=app/assets/builds/application.js && yarn css-admin",
 		"build:all": "yarn build",
 		"css-admin": "./node_modules/.bin/tailwindcss -i ./app/tailwind/admin_tailwind.css -o ./public/assets/admin_tailwind.css --minify",
 		"format": "prettier --write .",
