--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"tom-select": "^2.4.3"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.58.0",
 		"daisyui": "^5.5.14",
 		"husky": "8.0.3",
 		"lint-staged": "13.3.0",
