--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
 	"version": "3.0.0",
 	"private": true,
 	"dependencies": {
+		"@hotwired/turbo-rails": "8",
 		"@tailwindcss/cli": "^4.1.18"
 	},
 	"devDependencies": {
 		"daisyui": "^5.5.14",
-		"husky": "8.0.3",
+		"husky": "9",
 		"leaflet": "^1.9.4",
-		"lint-staged": "13.3.0",
-		"prettier": "2.8.1",
+		"lint-staged": "16",
+		"prettier": "3",
 		"tom-select": "^2.4.3"
 	},
 	"scripts": {
