--- a/app.json
+++ b/app.json
@@ -11,6 +11,10 @@
 		{
 			"command": "bundle exec rails events:scan_for_calendars_needing_import",
 			"schedule": "0 * * * *"
+		},
+		{
+			"command": "bundle exec rails counters:refresh_all",
+			"schedule": "30 4 * * *"
 		}
 	]
 }
